# EvaP

./: .codecov.yaml  .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hgeol  .hgignore  .landscape.yaml  .prospector.yaml  .pylintrc  .travis.yml  CONTRIBUTORS.rst  LICENSE.md  LICENSE.rst  NEXT_STEP.txt  README  README.md  README.rst  SECURITY.md  Vagrantfile  apache.conf  flake.nix  handler.wsgi  invalid_course_data.xls  layout.kdl  localsettings.py  manage.py  nix-setup.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements-travis.txt  requirements.txt  test_data.json  update.sh  urls.py  vagrant-ssh  (+2 more)
.github/: dependabot.yml  release.yml  renovate.json5
.github/setup_evap/: action.yml
.github/setup_nodejs/: action.yml
.github/setup_python/: action.yml
.github/workflows/: debug-tests.yml  release.yml  tests.yml  vrt.yml
Anonymization/: anonymization.properties.example
Anonymization/data/: ignores.txt  lorem_ipsum.txt
contributor/: forms.py
contributor/templates/: contributor_course_form.html  contributor_index.html  contributor_settings.html
contributor/tests/: test_forms.py
deployment/: apache.maintenance-template.conf  apache.template.conf  disable_maintenance_mode.sh  enable_maintenance_mode.sh  install_dart_sass.sh  load_production_backup.sh  localsettings.py  localsettings.template.py  manage_autocompletion.sh  productionsettings.template.py  provision_vagrant_vm.sh  site.pp  test_backup_and_restore_on_github.sh  test_backup_and_restore_on_travis.sh  update_production.sh  wsgi.template.conf  wsgi.template.py
deployment/modules/apache/: metadata.json
deployment/modules/concat/: metadata.json
deployment/providers/: default.sh  hyperv.sh
docs/: Makefile  conf.py  data.rst  index.rst  installation.rst  license.rst  make.bat  sources.rst
evaluation/: meta.py  models.py
evaluation/fixtures/: minimal_test_data.json  test_data.json
evaluation/migrations/: 0008_make_course_state_protected.py  0012_change_questionnaire_ordering.py  0013_rename_kind_to_type.py  0016_apply_course_degrees.py  0018_unique_degrees.py  0019_merge.py  0025_single_result_questionnaire.py  0026_make_result_counters_unique.py  0028_make_vote_dates_non_null.py  0033_remove_likert_and_grade_answer.py  0034_course_gets_no_grade_documents.py  0041_populate_semester_is_archived.py  0049_rename_course_states.py  0052_add_course_is_private.py  0053_auto_20161128_1829.py
evaluation/templates/: choice_button.html  legal_notice.html  result_bar.html  sortable_form_js.html  user_list_with_links.html
evaluation/tests/: test_auth.py  test_misc.py  test_models.py  test_tools.py  test_views.py
evap/: __main__.py  context_processors.py  middleware.py  settings.py  settings_resolver.py  settings_test.py  tools.py  urls.py  views.py  wsgi.py
evap/cms/: forms.py  json_importer.py  models.py  urls.py  views.py
evap/contributor/: forms.py  tests.py  urls.py  views.py
evap/development/: cisettings.py  localsettings.template.py  manage_autocompletion.sh  urls.py  views.py
evap/evaluation/: 403.py  admin.py  auth.py  constants.py  forms.py  merge.py  meta.py  middleware.py  models.py  models_logging.py  tests.py  tools.py  urls.py  views.py
evap/fsr/: fields.py  forms.py  importers.py  models.py  tests.py  tools.py  urls.py  views.py
evap/grades/: admin.py  forms.py  models.py  tests.py  tools.py  urls.py  views.py
evap/lecturer/: forms.py  urls.py  views.py
evap/new_settings/: common.py  debug_toolbar.py  default.py  dev.py  lazy.py  open_id.py  test.py
evap/results/: exporters.py  tests.py  tools.py  urls.py  views.py
evap/rewards/: exporters.py  forms.py  models.py  tests.py  tools.py  urls.py  views.py
evap/settings/: debug_toolbar.py  default.py  dev.py  local_services.py  open_id.py  schema.pyi  test.py
evap/staff/: fields.py  forms.py  importers.py  log_handler.py  staff_mode.py  tests.py  tools.py  urls.py  views.py
evap/static/: base.css  base.scss  sample.xls  sample.xlsx  sample_user.xls  sample_user.xlsx
evap/student/: forms.py  models.py  tests.py  tools.py  urls.py  views.py
evap/templates/: 400.html  403.html  404.html  500.html  base.html  evap_course_edit_js.html  faq.html  faq_de.json  faq_en.json  index.html  login.html  logout.html  topbar.html
grades/: admin.py  forms.py  models.py  tests.py
grades/templates/: grades_course_view.html  grades_index.html  grades_semester_menu.html
nix/: Containerfile  evap.nix  nix-python  nix.conf  services.nix  setup  setup-nix  shell.nix  tricks.md
projects/: Complete.sublime-project
requirements/: README.txt
results/: exporters.py  views.py
results/templates/: results_semester_detail.html
results/tests/: test_views.py
rewards/: exporters.py  models.py  views.py
rewards/migrations/: 0002_django18warning.py
rewards/templates/: rewards_reward_point_redemption_events.html
staff/: forms.py  views.py
staff/fixtures/: test_user_bulk_delete_file.txt  usecase-tests.json
staff/templates/: staff_course_operation.html  staff_course_participant_import.html  staff_course_type_merge.html  staff_course_type_merge_selection.html  staff_degree_index.html  staff_questionnaire_base.html  staff_questionnaire_index.html  staff_questionnaire_view.html  staff_semester_form.html  staff_semester_import.html  staff_semester_menu.html  staff_semester_questionnaire_assign_form.html  staff_semester_todo.html  staff_semester_view.html  staff_semester_view_course.html  staff_user_merge.html  staff_user_merge_selection.html
staff/tests/: test_forms.py  test_views.py
static/css/: bootstrap-datetimepicker-standalone.css
static/js/: moment.min.js
static_collected/dataTables/: de.json
student/: urls.py
student/templates/: student_index.html
templates/: 500.html  base.html
tools/: check_consistent_question_texts.py  check_dist.py  enrollment_preprocessor.py  enrolment_preprocessor.py
visual-regresion-tracking-evap/: .gitignore  docker-compose.yml  run_visual_regression_tests.sh  vrt-install.sh
(+1051 files in other folders)
